# strings3

./: .clang-format  .clangd  globber.py  meson.build
src/: main.cpp
src/headers/: common.hpp  utils.hpp
src/headers/coff_parser/: coff_parser.cpp  coff_parser.hpp
src/headers/files/: files.cpp  files.hpp
src/headers/strings/: strings.cpp  strings.hpp
